--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -7,21 +7,22 @@
 </head>
 <body>
     <header>
-
-        <a href="/"><img src="../static/images/logo.png" class="nav-logo"></a>
-        <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
-        <nav>
-            <ul>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Give</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About US</a></li>
-             </ul>
-        </nav>
-        <label for = "nav-toggle" class = "nav-toggle-label">
-        <span></span>
-        </label>
+        <div class="menu">
+            <a href="/" class="nav-logo-container"><img src="../static/images/logo.png" class="nav-logo"></a>
+            <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
+            <nav>
+                <ul>
+                    <li><a href="#">Watch</a></li>
+                    <li><a href="#">Give</a></li>
+                    <li><a href="#">Connect</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">About US</a></li>
+                 </ul>
+            </nav>
+            <label for = "nav-toggle" class = "nav-toggle-label">
+            <span></span>
+            </label>
+        </div>
     </header>
 <!--    <div class="video-container">-->
 <!--      <video autoplay loop muted>-->
