--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -1,7 +1,7 @@
 :root{
-    --nav-color: rgba(0,0,0,.0);
+    --nav-color: black;
     --nav-color2: rgb(223,213,213);
-    --burgundy: rgb(122,59,59);
+    --burgundy: rgb(122,59,59);     /*(86,0,34)*/
 }
 
 body{
@@ -12,7 +12,6 @@ body{
 
 header{
     background: var(--nav-color);
-    box-shadow: 0 5px 10px var(--nav-color);
     position: fixed;
     width: 100%;
     text-align: center;
@@ -71,8 +70,6 @@ nav ul{
     margin: 0;
     padding: 0;
     list-style: none;
-    display: flex;
-    align-items: center;
 }
 
 nav li{
@@ -81,7 +78,7 @@ nav li{
 }
 
 nav a{
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 1.2rem;
     text-transform: uppercase;
@@ -144,59 +141,81 @@ nav a:hover{
 
 @media screen and (min-width: 769px){
 
-    .nav-toggle-label{
-        display: none;
-    }
+        header{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
 
+        .menu{
+            display: flex;
+            justify-content: center;
 
+        }
 
-    .nav-logo {
-        max-width: 10%;
-        min-width: 10%;
+        .nav-toggle-label{
+            display: none;
+        }
 
-    }
+        .nav-logo-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 7.5%;
+            margin-right: 1.5em;
 
-    nav {
-        all: unset;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+        }
 
-    nav ul{
-        display: flex;
-    }
+        .nav-logo {
+            all: unset;
+            width: 100%;
+            margin-right: 0px;
+            margin-left: 0px;
 
-    nav li{
-        all: unset;
-        margin-bottom: 1em;
-        margin-left: 2em;
-        margin-right: 2em;
+        }
 
-    }
+        nav {
+            all: unset;
+            display: flex;
+            align-items: center;
 
-    nav a{
-        opacity: 1;
-        position: relative;
+        }
 
-    }
+        nav ul{
+            display: flex;
+            justify-content: center;
+        }
 
-    nav a::before{
-        content: '';
-        display: block;
-        height: 5px;
-        background: black;
-        position: absolute;
-        top: -.75em;
-        left: 0;
-        right: 0;
-        transform: scale(0,1);
-        transition: transform ease-in-out 250ms;
-    }
+        nav li{
+            all: unset;
+            margin-left: 2em;
+            margin-right: 2em;
 
-    nav a:hover::before{
-        transform: scale(1,1);
-    }
+        }
+
+        nav a{
+            opacity: 1;
+            position: relative;
+            font-size: 16px;
+
+        }
+
+        nav a::before{
+            content: '';
+            display: block;
+            height: 1px;
+            background: white;
+            position: absolute;
+            top: 1.75em;
+            left: 0;
+            right: 0;
+            transform: scale(0,1);
+            transition: transform ease-in-out 250ms;
+        }
+
+        nav a:hover::before{
+            transform: scale(1,1);
+        }
 
 
 }
