--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../static/css/homepage.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
@@ -17,18 +18,37 @@
                     <li><a href="#">Connect</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">About US</a></li>
-                 </ul>
+                </ul>
             </nav>
             <label for = "nav-toggle" class = "nav-toggle-label">
             <span></span>
             </label>
         </div>
     </header>
-<!--    <div class="video-container">-->
-<!--      <video autoplay loop muted>-->
-<!--        <source src="../static/videos/background-vid.mp4" type="video/mp4">-->
-<!--      </video>-->
-<!--    </div>-->
+    <div class="video-container">
+        <video autoplay loop muted>
+            <source src="../static/videos/background-vid.mp4" type="video/mp4">
+        </video>
+        <div class="splash-image">
+
+        </div>
+<!--        <div class="floating-buttons-container">-->
+<!--            <div class="floating-buttons">-->
+<!--                <ul>-->
+<!--                    <li><a href="#">In-Person Service</a></li>-->
+<!--                    <li><a href="#">Watch Online</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+        <div class ="bottom-menu-container">
+            <div class="bottom-menu">
+                <ul>
+                    <li><a href="#">Give Today</a></li>
+                    <li><a href="#">Events</a></li>
+                </ul>
+            </div>
+        </div>
+
 
 
 </body>
