--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -2,11 +2,12 @@
     --nav-color: black;
     --nav-color2: rgb(223,213,213);
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
+
 }
 
 body{
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 }
 
@@ -15,16 +16,20 @@ header{
     position: fixed;
     width: 100%;
     text-align: center;
+    z-index: 99;
+    height: 80px;
 }
 
-.logo-placeholder{
-    font-size: 72px;
+
+
+
+.nav-logo-container{
     width: 100%;
-    padding: 50px;
 }
 
 .nav-logo{
-    width: 8%;
+    width: auto;
+    height: 80px;
 
 }
 
@@ -80,7 +85,7 @@ nav li{
 nav a{
     color: white;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 14px;
     text-transform: uppercase;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
@@ -117,34 +122,37 @@ nav a:hover{
 
 /* Set the video container to the size you want */
 .video-container {
-  z-index: -1;
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 90%;
-  overflow: hidden;
+  height: 826px;
 }
 
 /* Style the video element to cover the entire container */
 .video-container video {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+
 }
+
+.bottom-menu-container{
+    display: none;
+}
+
 
 
 @media screen and (min-width: 769px){
 
         header{
+            position: static;
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 120px;
         }
 
         .menu{
@@ -162,13 +170,14 @@ nav a:hover{
             justify-content: center;
             align-items: center;
             max-width: 7.5%;
-            margin-right: 1.5em;
+            margin-right: 4em;
 
         }
 
         .nav-logo {
             all: unset;
-            width: 100%;
+            width: auto;
+            height: 120px;
             margin-right: 0px;
             margin-left: 0px;
 
@@ -217,6 +226,74 @@ nav a:hover{
             transform: scale(1,1);
         }
 
+        .video-container {
+          position: relative;
+          top: auto;
+          width: 100%;
+          height: 706px;
+        }
+
+        /* Style the video element to cover the entire container */
+        .video-container video {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          z-index: -1;
+        }
+
+
+        .bottom-menu-container{
+            width: 100%;
+            height: 50px;
+            position: absolute;
+            bottom: 0px;
+            display: flex;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            border: 1px solid black;
+            padding: 10px;
+            background: rgba(0,0,0,.25);
+
+        }
+
+        .bottom-menu{
+            padding: 0px;
+
+        }
+
+        .bottom-menu ul{
+
+        }
+
+        .bottom-menu li{
+            width: 100px;
+            background-color: #F8F8F8;
+            padding: 20px;
+            display: inline-block;
+            margin-right: 0px;
+            margin-left: 0px;
+
+        }
+
+        .bottom-menu-container li:last-child {
+
+            margin-right: 0;
+        }
+
+        .bottom-menu a{
+            color: #333333;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .bottom-menu-container a:hover {
+            color: #FF0000;
+        }
 
 }
 
