--- a/website/static/css/template.css
+++ b/website/static/css/template.css
@@ -2,11 +2,12 @@
     --nav-color: black;
     --nav-color2: rgb(223,213,213);
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
+
 }
 
 body{
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 }
 
@@ -15,16 +16,20 @@ header{
     position: fixed;
     width: 100%;
     text-align: center;
+    z-index: 99;
+    height: 80px;
 }
 
-.logo-placeholder{
-    font-size: 72px;
+
+
+
+.nav-logo-container{
     width: 100%;
-    padding: 50px;
 }
 
 .nav-logo{
-    width: 8%;
+    width: auto;
+    height: 80px;
 
 }
 
@@ -80,7 +85,7 @@ nav li{
 nav a{
     color: white;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 14px;
     text-transform: uppercase;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
@@ -116,35 +121,16 @@ nav a:hover{
 }
 
 /* Set the video container to the size you want */
-.video-container {
-  z-index: -1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 90%;
-  overflow: hidden;
-}
-
-/* Style the video element to cover the entire container */
-.video-container video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-}
 
 
 @media screen and (min-width: 769px){
 
         header{
+            position: static;
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 120px;
         }
 
         .menu{
@@ -162,13 +148,14 @@ nav a:hover{
             justify-content: center;
             align-items: center;
             max-width: 7.5%;
-            margin-right: 1.5em;
+            margin-right: 4em;
 
         }
 
         .nav-logo {
             all: unset;
-            width: 100%;
+            width: auto;
+            height: 120px;
             margin-right: 0px;
             margin-left: 0px;
 
@@ -216,6 +203,7 @@ nav a:hover{
         nav a:hover::before{
             transform: scale(1,1);
         }
+
 
 
 }
