--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+
+<!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -22,8 +24,5 @@
         <span></span>
         </label>
     </header>
-    <video autoplay loop muted playsinline class ="back-video">
-        <source src="{{url_for('static', filename='videos/background-vid.mp4')}}" linear type="video/mp4">
-    </video>
 </body>
 </html>
