--- a/website/templates/template.html
+++ b/website/templates/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-<!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
+    <link rel="stylesheet" href="../static/css/template.css"> <!link css file
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
