--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -29,17 +29,19 @@
         <video autoplay loop muted>
             <source src="../static/videos/background-vid.mp4" type="video/mp4">
         </video>
-        <div class="splash-image">
-
+        <div class="splash-image-container">
+            <div class="splash-image">
+                <img src="../static/images/logo.png" class="splash-image">
+            </div>
         </div>
-<!--        <div class="floating-buttons-container">-->
-<!--            <div class="floating-buttons">-->
-<!--                <ul>-->
-<!--                    <li><a href="#">In-Person Service</a></li>-->
-<!--                    <li><a href="#">Watch Online</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="floating-buttons-container">
+            <div class="floating-buttons">
+                <ul>
+                    <li><a href="#">In-Person Service</a></li>
+                    <li><a href="#">Watch Online</a></li>
+                </ul>
+            </div>
+        </div>
         <div class ="bottom-menu-container">
             <div class="bottom-menu">
                 <ul>
