--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -50,8 +50,81 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="grid-backdrop">
+        <div class="grid">
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
 
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
 
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+
+            </div>
+            <div>
+                <h2>TITLE</h2>
+                <hr class="divider">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
+                        ut rhoncus mauris eleifend at.</p>
+                <img src="../static/images/placeholder-image.png" class="placeholder-img">
+
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
