--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -55,21 +55,21 @@
         <div class="grid">
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -77,7 +77,7 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -85,7 +85,7 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -93,7 +93,7 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -101,7 +101,7 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -109,7 +109,7 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
@@ -117,12 +117,27 @@
             </div>
             <div>
                 <h2>TITLE</h2>
-                <hr class="divider">
+                <hr class="card-divider">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
                         ut rhoncus mauris eleifend at.</p>
                 <img src="../static/images/placeholder-image.png" class="placeholder-img">
 
             </div>
+        </div>
+        <div class="more-grid-backdrop">
+
+        </div>
+    </div>
+    <div class="connect-with-us-container">
+        <img src="../static/images/join-us.jpg">
+        <div class="connect-with-us">
+            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
+            <hr class="connect-with-us-divider">
+            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
+                Your membership is a submission to a covenant with God and His people that is
+                inclusive, compassionate and honorable.</p>
+            <li><a href="#">Learn About Membership</a></li>
+
         </div>
     </div>
 
