Updated templates -- homepage DONE, fix need to fix mobile footer

--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -13,11 +13,11 @@
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Give</a></li>
-                    <li><a href="#">Connect</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">About US</a></li>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
                 </ul>
             </nav>
             <label for = "nav-toggle" class = "nav-toggle-label">
@@ -140,6 +140,35 @@
 
         </div>
     </div>
+    <div class="footer-container">
+    <div class="column">
+      <h4>SERVICE TIMES</h4>
+      <p>SUNDAY WORSHIP SERVICE<br>IN-PERSON & VIRTUAL<br>11AM (CST)</p>
+      <p>BIBLE CLASS<br>IN-PERSON & VIRTUAL<br>7:00PM (CST)</p>
+    </div>
+
+        <div class="footer-divider"></div>
+
+        <div class="footer-links">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+        </div>
+
+        <div class="footer-divider"></div>
+
+
+    <div class="column">
+      <h4>ADDRESS</h4>
+      <p>1505 ROBINSON STREET<br>JACKSON, MS 39203</p>
+      <p>601-354-2599 (Office)<br>GBTNEWS@GBTCHURCH.ORG</p>
+    </div>
+  </div>
 
 </body>
 </html>
