--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -19,6 +19,7 @@ header{
     text-align: center;
     z-index: 99;
     height: 80px;
+
 }
 
 
@@ -127,6 +128,8 @@ nav a:hover{
   position: relative;
   width: 100%;
   height: 500px;
+  overflow: hidden; /* Enable vertical scrolling if the content overflows */
+
 }
 
 /* Style the video element to cover the entire container */
@@ -211,7 +214,7 @@ nav a:hover{
     }
 
 .floating-buttons-container li:hover {
-    background: grey;
+    background: rgb(47,46,46);
     transition: background-color 0.5s ease; /* Change duration value to make the transition slower or faster */
     }
 
@@ -308,6 +311,34 @@ p {
 .connect-with-us-container{
     display: none;
 }
+
+h4{
+    position: relative;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-links{
+    display: inline-block;
+
+    position: absolute;
+    top: 6300px;
+}
+
+.footer-logo{
+    width: 40%;
+}
+
+.socials{
+            display: flex;
+            width: 200px;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+        }
+
 @media screen and (min-width: 769px){
 
         header{
@@ -568,6 +599,7 @@ p {
 
 
 
+
         }
 
         .connect-with-us-container{
@@ -660,8 +692,115 @@ p {
         }
 
         .connect-with-us li:hover{
-            background: grey;
+            background: rgb(47,46,46);
             transition: background-color 0.5s ease;
         }
+
+        .footer-container {
+              all: unset;
+              display: flex;
+              justify-content: center;
+              align-items: flex-start;
+              background: rgb(47,46,46);
+              overflow: hidden; /* Enable vertical scrolling if the content overflows */
+
+            }
+        .footer-logo-container{
+            all: unset;
+            padding: 0px
+            margin: 0px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+            height: auto;
+        }
+        .footer-logo{
+            all: unset;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px
+            width: auto;
+            height: 120px;
+            margin: 0px;
+        }
+
+        .column {
+              all: unset
+              padding: 20px;
+              text-align: center;
+              color: white;
+              margin-bottom: 50px;
+              margin-left: 75px;
+              margin-right: 75px;
+
+            }
+
+        .column p{
+            position: relative;
+            top: 10px;
+            color: white;
+            text-align: center;
+            margin: 0px
+            padding: 0px;
+            font-weight: 100;
+        }
+
+        @media screen and (max-width: 1150px){
+            .column {
+              display: none;
+
+            }
+            .footer-divider{
+                display: none;
+            }
+        }
+        .footer-divider {
+              position: relative;
+              top: 25px;
+              width: 0px;
+              height: 175px;
+              background-color: black;
+              border: 1px dotted white;
+
+            }
+
+        .socials{
+            all: unset;
+            display: flex;
+            width: 200px;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .social-logo{
+            all: unset;
+            display: flex;
+            width: 100%;
+        }
+
+        .footer-links{
+            all: unset;
+            margin-left: 100px;
+            margin-right: 100px;
+
+        }
+        .footer-links p{
+            color: white;
+            font-size: 12px;
+        }
+
+        h4{
+            color: white;
+            font-size: 24px;
+            font-weight: 400;
+            text-align: center;
+            margin: 0px;
+            margin-top: 20px;
+            padding: 0px;
+        }
+
 }
 
