--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -168,6 +168,16 @@
       <p>1505 ROBINSON STREET<br>JACKSON, MS 39203</p>
       <p>601-354-2599 (Office)<br>GBTNEWS@GBTCHURCH.ORG</p>
     </div>
+    <div class="footer-links-mobile">
+                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+            <div class="socials">
+                <a href="/" class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/twitter.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/yt.webp" class="social-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/insta.webp" class="social-logo"></a>
+            </div>
+            <p>© 2023 Greater Bethlehem Temple</p>
+    </div>
   </div>
 
 </body>
