--- a/website/static/css/about-us.css
+++ b/website/static/css/about-us.css
@@ -20,6 +20,11 @@ header{
     height: 80px;
 }
 
+.header1{
+    width: 100%;
+    height: 80px;
+}
+
 
 
 
@@ -118,6 +123,60 @@ nav a:hover{
     opacity: 1;
     transition: opacity 250ms ease-in-out 250ms;
 
+}
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden; /* Enable vertical scrolling if the content overflows */
+  
+  }
+  
+  /* Style the video element to cover the entire container */
+  .video-container video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  
+  }
+  .splash-image-container{
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 200px;
+    display: flex;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+}
+
+.splash-image img{
+    width: 150px;
+    height: 150px;
+}
+
+.bckgrnd-image{
+    opacity: .8;
+}
+.bckgrnd-image-container{
+    background-color: var(--burgundy);
+    height: 475px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.bckgrnd-image-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
