--- a/website/templates/about-us.html
+++ b/website/templates/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
 
-    <!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
+    <link rel="stylesheet" href="../static/css/about-us.css"> 
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
@@ -24,6 +24,7 @@
         <span></span>
         </label>
     </header>
-
+    <div class="bckgrnd-image-container">
+            <img src="../static/images/GBTChurch.jpeg" alt="GBTChurch" class="bckgrnd-image">
 </body>
 </html>
