--- a/website/templates/about-us.html
+++ b/website/templates/about-us.html
@@ -25,6 +25,14 @@
         </label>
     </header>
     <div class="bckgrnd-image-container">
-            <img src="../static/images/GBTChurch.jpeg" alt="GBTChurch" class="bckgrnd-image">
+        <div class="Title-text-container">
+            <h1>Our Vision</h1>
+        </div>
+        <div class="Body-text-container">
+            <p>The vision of the Greater Bethlehem Temple Church Ministry is to change people into true disciples of Christ.</p>
+        </div>
+        <img src="../static/images/GBTChurch.jpeg" alt="GBTChurch" class="bckgrnd-image">
+        <div class="shade"></div>
+    </div>
 </body>
 </html>
